<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/emptybackground"
    android:layout_height="match_parent"
    tools:context=".Activitys.Add.AddMenuItem">

    <TextView
        android:id="@+id/addMenuItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title0_dish"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMenuSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:onClick="addMenuSave"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/addRestaurantDiscardButton"
        app:layout_constraintTop_toBottomOf="@+id/aa4"
        app:srcCompat="@drawable/ic_save_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMenuDiscardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:onClick="addMenuDiscard"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aa4"
        app:rippleColor="#FDEBEB"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <TableLayout
        android:id="@+id/aa4"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/longbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMenuItemTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addMenuItemNameTitle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/title1_dish"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addMenuItemNameText"
                android:layout_width="150dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addMenuItemIngredientsTitle"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/title2_dish"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addMenuItemIngredientsText"
                android:layout_width="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addMenuItemPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/title3_dish"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addMenuItemPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </TableRow>

    </TableLayout>

    <Switch
        android:id="@+id/aSwitchAddMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/title4_dish"
        app:layout_constraintEnd_toStartOf="@+id/addMenuSaveButton"
        app:layout_constraintStart_toEndOf="@+id/addMenuDiscardButton"
        app:layout_constraintTop_toBottomOf="@+id/aa4" />

</androidx.constraintlayout.widget.ConstraintLayout>