<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Activitys.Edit.EditRestaurant">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/title5_restaurant"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRestaurantImage" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:onClick="saveData"
        android:scrollbarTrackVertical="@drawable/ic_save_black_24dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:srcCompat="@drawable/ic_save_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRestaurantDiscardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:onClick="discard"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:rippleColor="#FDEBEB"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/longbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/editName"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center|end"
                android:text="@string/title1_restaurant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNameText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/editKitchen"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center|end"
                android:text="@string/title2_restaurant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editKitchenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center|end"
                android:text="@string/title3_restaurant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="TextView" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/editRestaurantImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:background="#160101"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Switch
        android:id="@+id/aSwitchEditRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title4_restaurant"
        app:layout_constraintEnd_toStartOf="@+id/addSaveButton"
        app:layout_constraintStart_toEndOf="@+id/addRestaurantDiscardButton"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>